defconfig: Build wlan driver into kernel
Signed-off-by: Rem01 Gaming <wisnugunawan2008@gmail.com>

--- a/arch/arm64/configs/even_defconfig
+++ b/arch/arm64/configs/even_defconfig
@@ -1602,6 +1602,7 @@ CONFIG_OPLUS_FEATURE_ELEVATOR_DETECT=y
 # Modem & Connectivity
 #
 CONFIG_MTK_COMBO=y
+CONFIG_WLAN_DRV_BUILD_IN=y
 # CONFIG_MTK_COMBO_CHIP_MT6620 is not set
 # CONFIG_MTK_COMBO_CHIP_MT6628 is not set
 # CONFIG_MTK_COMBO_CHIP_MT7668 is not set
