--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "KernelSU"]
 	path = KernelSU
 	url = https://github.com/tiann/KernelSU.git
+[submodule "drivers/misc/mediatek/gpu/gpu_mali/mali_bifrost/gpu_mali_bifrost_driver"]
+	path = drivers/misc/mediatek/gpu/gpu_mali/mali_bifrost/gpu_mali_bifrost_driver
+	url = https://github.com/Rem01Gaming/gpu_mali_bifrost_driver.git
+	branch = oplus-even
