--- a/arch/arm64/configs/even_defconfig
+++ b/arch/arm64/configs/even_defconfig
@@ -1940,7 +1940,7 @@ CONFIG_MTK_TINYSYS_SSPM_SUPPORT=y
 # CONFIG_MTK_TINYSYS_SSPM_PLT_SUPPORT is not set
 # CONFIG_MTK_MET_MEM_ALLOC is not set
 CONFIG_MTK_GPU_SUPPORT=y
-CONFIG_MTK_GPU_VERSION="mali bifrost r25p0"
+CONFIG_MTK_GPU_VERSION="mali bifrost gpu_mali_bifrost_driver"
 CONFIG_MTK_GPU_COMMON_DVFS_SUPPORT=y
 CONFIG_MTK_GPU_OPP_STATS_SUPPORT=y
 # CONFIG_MTK_GPU_R5P0 is not set
